--- a/src/content/blogs/blog-3-you-have-patches-upstream-great-how-to-contribute-more.mdx
+++ b/src/content/blogs/blog-3-you-have-patches-upstream-great-how-to-contribute-more.mdx
@@ -4,10 +4,10 @@ description: In this third and final part to our Blog Series on how to become a
   Kernel Developer, we take a look at how to contribute more to the Linux kernel
   through testing, maintaining and reviewing the code.
 date: 2025-10-01T09:00:00.000+01:00
-author: Vinod Koul
+author: vinod-koul
 tags:
-  - Linux Kernel
-  - Open Source
+  - linux-kernel
+  - open-source
 image: https://res.cloudinary.com/dl7c2wmhi/image/upload/v1759301846/linaro-website/images/blog/3ef621b3-3efe-400d-a29a-941810aefae4_f7hkoy.jpg
 related: []
 ---
