--- a/src/content/blogs/blog-3-you-have-patches-upstream-great-how-to-contribute-more.mdx
+++ b/src/content/blogs/blog-3-you-have-patches-upstream-great-how-to-contribute-more.mdx
@@ -38,7 +38,7 @@ It's a well-known fact that Linux kernel maintainers are often overwhelmed with 
 
 If you find a patch to be satisfactory and believe it adheres to the high standards of the Linux kernel, you can provide your approval by replying to the patch email with a "Reviewed-by" tag. The standard format for this tag is:
 
-Reviewed-by: Your RealName [[your.email@example.com](mailto:your.email@example.com)](<mailto:[your.email@example.com](mailto:your.email@example.com)>)
+Reviewed-by: Your RealName <your.email@example.com>
 
 Your contributions to code reviews are formally recognized. [LWN (Linux Weekly News) ](https://lwn.net/)statistics credit reviewers when patches are published, providing valuable statistics for each kernel release. It's noteworthy that companies like Linaro, which deeply embody the principles of open source development, frequently have a significant number of their employees featured in these review statistics lists, highlighting their consistent contributions to the community.
 
