--- a/src/content/blogs/blog-3-you-have-patches-upstream-great-how-to-contribute-more.mdx
+++ b/src/content/blogs/blog-3-you-have-patches-upstream-great-how-to-contribute-more.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Blog 3: You have patches upstream, great! How to contribute more!"
+title: "Becoming a Kernel Developer (3/3): You have patches upstream, great! How to contribute more!"
 description: In this third and final part to our Blog Series on how to become a
   Kernel Developer, we take a look at how to contribute more to the Linux kernel
   through testing, maintaining and reviewing the code.
@@ -26,7 +26,7 @@ You can use your existing hardware. If you encounter issues, reporting them is c
 
 ![](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1759303009/linaro-website/images/blog/image2_uxnbbh.png)
 
-Once you are comfortable with reporting, the next step is to conduct a deeper investigation. Running regression tests is very helpful. For those seeking more adventure, tracing the regression's origin and "bisecting" issues ([doing a binary search to pinpoint when a bug was introduced](https://git-scm.com/book/en/v2/Git-Tools-Debugging-with-Git%23_binary_search)) are options. The truly brave can even propose and aim to get a fix accepted into the main Linux codebase—how cool is that?
+Once you are comfortable with reporting, the next step is to conduct a deeper investigation. Running regression tests is very helpful. For those seeking more adventure, tracing the regression's origin and "bisecting" issues ([doing a binary search to pinpoint when a bug was introduced](https://git-scm.com/book/en/v2/Git-Tools-Debugging-with-Git#_binary_search)) are options. The truly brave can even propose and aim to get a fix accepted into the main Linux codebase—how cool is that?
 
 ## Reviews
 
