update titles and url

--- a/src/content/blogs/blog-2-posted-patches-what-next.mdx
+++ b/src/content/blogs/blog-2-posted-patches-what-next.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Blog 2: Posted patches, what next?"
+title: "Becoming a Kernel Developer (2/3): Posted patches, what next?"
 description: "The Linux kernel development community is largely built around
   collaboration and communication. In last week's blog we talked about how to
   submit a patch. In this blog - the second part of our blog series on how to
