--- a/src/content/blogs/upstream-secure-data-path-with-optee-part1.mdx
+++ b/src/content/blogs/upstream-secure-data-path-with-optee-part1.mdx
@@ -6,8 +6,8 @@ date: 2025-11-26T00:00:00.000Z
 image: >-
   https://res.cloudinary.com/dl7c2wmhi/image/upload/v1764139988/linaro-website/images/blog/IMG_1634_ogl9df.jpg
 tags:
-  - Embedded
-  - op-TEE
+  - iot-embedded
+  - op-tee
   - security
   - meta
 author: jens-wiklander
