--- a/src/content/blogs/upstream-secure-data-path-with-optee-part1.mdx
+++ b/src/content/blogs/upstream-secure-data-path-with-optee-part1.mdx
@@ -14,6 +14,8 @@ author: jens-wiklander
 related: []
 ---
 
+Beyond Digital Rights Management (DRM) solutions, there has always been a demand for applications such as Secure Video Playback and Secure Video Recording. Let’s explore how Linaro’s Secure Data Path patchset enables these use cases.
+
 ## Introduction
 
 OP-TEE, a secure world OS implementation, is maintained by Linaro and adheres to the [GlobalPlatform specifications](https://globalplatform.org/specs-library/tee-client-api-specification/).
