Update Post “upstream-secure-data-path-with-optee-part1”

--- a/src/content/blogs/upstream-secure-data-path-with-optee-part1.mdx
+++ b/src/content/blogs/upstream-secure-data-path-with-optee-part1.mdx
@@ -1,16 +1,18 @@
 ---
 title: Upstream Secure Data Path with OP-TEE Part 1
 description: >
-  Beyond Digital Rights Management (DRM) solutions, there has always been a demand for applications such as Secure Video Playback and Secure Video Recording. Let’s explore how Linaro’s Secure Data Path patchset enables these use cases.
+  Beyond Digital Rights Management (DRM) solutions, there has always been a
+  demand for applications such as Secure Video Playback and Secure Video
+  Recording. Let’s explore how Linaro’s Secure Data Path patchset enables these
+  use cases.
 date: 2025-11-26T00:00:00.000Z
-image: >-
-  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1764139988/linaro-website/images/blog/IMG_1634_ogl9df.jpg
+author: jens-wiklander
 tags:
   - iot-embedded
   - op-tee
   - security
   - meta
-author: jens-wiklander
+image: https://res.cloudinary.com/dl7c2wmhi/image/upload/v1764239701/linaro-website/images/blog-hero-images/IMG_1634_qifwxr.jpg
 related: []
 ---
 
