Remove references to resources.linaro.org

--- a/src/content/blogs/linaro-top-contributor-to-the-6-3-linux-kernel-release.mdx
+++ b/src/content/blogs/linaro-top-contributor-to-the-6-3-linux-kernel-release.mdx
@@ -26,7 +26,7 @@ In this blog, we asked the Linaro Engineers featured in LWN’s list of most act
 
 Krzysztof Kozlowski was mostly working on improving the Qualcomm ecosystem and the vast number of its already upstreamed SoCs. This resulted in several patches mostly for DTS files, but also for Devicetree bindings for remote processors, pin controllers and others. Beside this, Krzysztof was improving the Qualcomm audio codec drivers and added the SM8550 Audio components: specialised pin controller for the Low Power Audio SubSystem (LPASS) and the ADSP Generic Packet Router (GPR). Both LPASS and GPR are parts of larger work of bringing full audio support to the newest Qualcomm Snapdragon 8 Gen 2 SoC (SM8550).
 
-Continuation of Krzysztof’s work on PREEMPT\_RT resulted in one important patch solving the remaining PSCI cpuidle driver headache in the Real-Time use case. This concluded Krzysztof’s work on bringing Linux Real-Time to the [Qualcomm RB5 Robotics Platform](https://www.qualcomm.com/products/internet-of-things/industrial/industrial-automation/robotics-rb5-platform) and was also presented on [Linaro Connect session LHR23-204](https://resources.linaro.org/en/resource/fX76n9YiNUCfCTMvLRCWAv).
+Continuation of Krzysztof’s work on PREEMPT\_RT resulted in one important patch solving the remaining PSCI cpuidle driver headache in the Real-Time use case. This concluded Krzysztof’s work on bringing Linux Real-Time to the [Qualcomm RB5 Robotics Platform](https://www.qualcomm.com/products/internet-of-things/industrial/industrial-automation/robotics-rb5-platform) and was also presented at [Embedded Open Source Summity](https://www.youtube.com/watch?v=UMWGNjgZS6A).
 
 In his spare time, Krzysztof improved several other ARM64 platforms, fixing their Devicetree check warnings. Krzysztof was as usual quite an active reviewer in the ARM ecosystem as a lot of Devicetree bindings and DTS files are reviewed by him. This resulted in 225 Reviewed-by credits for v6.3 Linux.
 
