--- a/src/content/blogs/onelab-launch-at-linaro-connect-madrid-2024.mdx
+++ b/src/content/blogs/onelab-launch-at-linaro-connect-madrid-2024.mdx
@@ -42,7 +42,7 @@ Enabling the Qualcomm RB2 | Enabling the TI SK-AM62B
 
 The Linaro Automation Appliance (LAA) was able to control both boards' critical features, such as UART, Ethernet, and power and reset, allowing them to remotely participate in the ONELab.
 
-The [LAA](https://resources.linaro.org/en/resource/fwWCArmwQyjvLgnFMdZwwT) provides complete remote access to a DUT at the production scale, including full recovery of bricked devices using the widely adopted [LAVA CI model](https://docs.lavasoftware.org/lava/lava_ci.html). With this setup, all further enablement activities can be performed remotely using the appliance's remote bring-up tools.
+The [LAA](https://www.youtube.com/watch?v=L_y9baIrMwc) provides complete remote access to a DUT at the production scale, including full recovery of bricked devices using the widely adopted [LAVA CI model](https://docs.lavasoftware.org/lava/lava_ci.html). With this setup, all further enablement activities can be performed remotely using the appliance's remote bring-up tools.
 
 We plan to prove this enablement by shipping the boards directly to our lab in Cambridge and assigning the remaining bring-up tasks to one of our non-Cambridge employees.
 
