Remove links to snapshots and releases

--- a/src/content/blogs/securing-a-device-with-trusted-substrate.mdx
+++ b/src/content/blogs/securing-a-device-with-trusted-substrate.mdx
@@ -252,6 +252,6 @@ but this time you won't have to supply a password!
 
 Distros use an intermediate bootloader called SHIM before loading GRUB and eventually your OS. SHIM, which mainly exists to bridge the signing authority gap between commercial firmware implementation - microsoft keys and distros, is responsible for verifying GRUB which in turn is responsible for verifying your OS kernel. This makes sense for large servers and commercial hardware with a number of hardware combinations.  
 
-However this adds an unnecessary complexity and increased attack surface on small purpose-built devices.  In a follow up post we will explore booting the kernel directly and enabling UEFI secure boot using Trusted Substrate and the [LEDGE reference platform](http://releases.linaro.org/components/ledge/rp-0.3/).
+However this adds an unnecessary complexity and increased attack surface on small purpose-built devices.  In a follow up post we will explore booting the kernel directly and enabling UEFI secure boot using Trusted Substrate and the LEDGE reference platform.
 
 To find out more about Trusted Substrate and how to get involved, visit [our project page](https://linaro.atlassian.net/wiki/spaces/TS/overview).
