Update Post “linaro-transfers-kernel-building-and-testing-tools-to-the-kernelci-project”

--- a/src/content/blogs/linaro-transfers-kernel-building-and-testing-tools-to-the-kernelci-project.mdx
+++ b/src/content/blogs/linaro-transfers-kernel-building-and-testing-tools-to-the-kernelci-project.mdx
@@ -1,6 +1,8 @@
 ---
 title: Linaro Transfers Kernel Building and Testing Tools to the KernelCI ProjecT
-description: Linaro Transfers Kernel Building and Testing Tools to the KernelCI ProjecT
+description: " Linaro has transferred ownership of three key open-source
+  projects: Tuxmake, TuxRun, and TuxLava to the KernelCI project, hosted by The
+  Linux Foundation."
 date: 2026-01-20T10:30:00.000Z
 author: benjamin-copeland
 tags:
