Update Post “linaro-transfers-kernel-building-and-testing-tools-to-the-kernelci-project”

--- a/src/content/blogs/linaro-transfers-kernel-building-and-testing-tools-to-the-kernelci-project.mdx
+++ b/src/content/blogs/linaro-transfers-kernel-building-and-testing-tools-to-the-kernelci-project.mdx
@@ -1,6 +1,6 @@
 ---
 title: Linaro Transfers Kernel Building and Testing Tools to the KernelCI ProjecT
-description: " Linaro has transferred ownership of three key open-source
+description: "Linaro has transferred ownership of three key open-source
   projects: Tuxmake, TuxRun, and TuxLava to the KernelCI project, hosted by The
   Linux Foundation."
 date: 2026-01-20T10:30:00.000Z
@@ -20,11 +20,11 @@ Building and testing the Linux kernel across dozens of architectures, compilers,
 
 \- **TuxLava** integrates these capabilities with LAVA test infrastructure
 
-   Together, they form the foundation of modern kernel CI workflows.
+Together, they form the foundation of modern kernel CI workflows.
 
 ### **What's Moving**
 
-  The following repositories now live under the KernelCI GitHub namespace:
+The following repositories are now live under the KernelCl GitHub namespace:
 
 [\- https://github.com/kernelci/tuxmake](https://github.com/kernelci/tuxmake)
 
@@ -52,7 +52,7 @@ For users of Tuxsuite, Linaro's commercial service built on these open-source to
 
 This move reflects the maturity of these projects and the value they provide to the kernel development community. Tuxmake simplifies kernel builds to a single command, automatically handling cross-compilation toolchains across architectures; TuxRun executes boot and functional tests via QEMU; and TuxLava connects these capabilities to LAVA test farms. Together, they form the foundation of modern kernel CI workflows. 
 
-We look forward to collaborating with KernelCI and the broader community to continue improving Linux kernel build and test infrastructure. We look forward to collaborating with KernelCI and the broader community to continue improving Linux kernel build and test infrastructure.
+We look forward to collaborating with KernelCI and the broader community to continue improving Linux kernel build and test infrastructure. 
 
 We thank everyone who has contributed to Tuxmake, TuxRun, and TuxLava over the years, and we are excited to see these tools thrive in their new home.
 
