Update Post “debugging-while-you-sleep-using-linaro-ddt”

--- a/src/content/blogs/debugging-while-you-sleep-using-linaro-ddt.mdx
+++ b/src/content/blogs/debugging-while-you-sleep-using-linaro-ddt.mdx
@@ -1,14 +1,12 @@
 ---
-title: Debugging while you sleep using Linaro DDT
-description: >-
-  In this blog we talk about how to debug offline using Linaro DDT. Read more
-  here!
+title: Debugging while you sleep using Linaro DDT.
+description: In this blog we talk about how to debug offline using Linaro DDT.
+  Read more here!
 date: 2018-04-24T11:57:38.000Z
-image: >-
-  https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/DataCenter
+author: beau-paisley
 tags:
   - hpc
-author: beau-paisley
+image: https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/DataCenter
 related: []
 ---
 
