Update Post “linaro-transfers-kernel-building-and-testing-tools-to-the-kernelci-project”

--- a/src/content/blogs/linaro-transfers-kernel-building-and-testing-tools-to-the-kernelci-project.mdx
+++ b/src/content/blogs/linaro-transfers-kernel-building-and-testing-tools-to-the-kernelci-project.mdx
@@ -1,5 +1,5 @@
 ---
-title: Linaro Transfers Kernel Building and Testing Tools to the KernelCI ProjecT
+title: Linaro Transfers Kernel Building and Testing Tools to the KernelCI Project
 description: "Linaro has transferred ownership of three key open-source
   projects: Tuxmake, TuxRun, and TuxLava to the KernelCI project, hosted by The
   Linux Foundation."
