finish update to Astro v5

--- a/src/content/blogs/introducing-the-windowsperf-gui-the-visual-studio-2022-extension.mdx
+++ b/src/content/blogs/introducing-the-windowsperf-gui-the-visual-studio-2022-extension.mdx
@@ -1,9 +1,9 @@
 ---
-title: 'Introducing the WindowsPerf GUI: the Visual Studio 2022 extension'
+title: "Introducing the WindowsPerf GUI: the Visual Studio 2022 extension"
 description: >-
   In this blog, learn about the WindowsPerf GUI, a powerful Visual Studio 2022
   extension developed by the WindowsPerf team. Find out more about what exactly
-  WindowsPerf is, and why we need a graphical interface. 
+  WindowsPerf is, and why we need a graphical interface.
 date: 2023-09-03T23:09:28.000Z
 image: >-
   https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/Chip_background_UNDER_2MB
@@ -37,7 +37,7 @@ Once the path is set, a simple click on the ‘Validate’ button will not only 
 
 **An added safeguard?** The extension remains dormant until this step is executed, ensuring you’re always on the right track. For a clearer understanding, have a look at the following illustration:
 
-![WindowsPerf settings UI tutorial](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/update-settings "WindowsPerf settings UI tutorial")
+![WindowsPerf settings UI tutorial](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1712246633/linaro-website/images/blog/update-settings.gif "WindowsPerf settings UI tutorial")
 
 WindowsPerf settings UI tutorial
 
