--- a/src/content/events/a-device-makers-journey-to-cra-compliance-with-linaro.mdx
+++ b/src/content/events/a-device-makers-journey-to-cra-compliance-with-linaro.mdx
@@ -3,6 +3,7 @@ title: >
   A Device Maker's Journey to CRA Compliance with Linaro
 description: >+
   The EU Cyber Resilience Act (CRA) is redefining how connected devices are built, shipped, and maintained. Compliance is not a single checklist item; it is an organisational shift that reshapes product roadmaps, legacy portfolios, and long‑term strategy.
+location: |
   Virtual
 date_published: 2026-02-03 08:00:00 +00:00
 event_start: 2026-02-24 09:00:00 +00:00
