--- a/src/content/events/a-device-makers-journey-to-cra-compliance-with-linaro.mdx
+++ b/src/content/events/a-device-makers-journey-to-cra-compliance-with-linaro.mdx
@@ -11,7 +11,7 @@ event_end: 2026-02-24 10:00:00 +00:00
 image: linaro-website/images/events/Webinar-Banner_1_gvut0m.png
 type: webinar
 button:
-  text: View
+  text: Register
   url: https://event.eu.on24.com/wcc/r/8000184734/9AC192B7BEBD7D3571F5A057270D8C78
 ---
 
