Update Post “preparing-for-the-eu-cyber-resilience-act-cra-with-linaro”

--- a/src/content/blogs/preparing-for-the-eu-cyber-resilience-act-cra-with-linaro.mdx
+++ b/src/content/blogs/preparing-for-the-eu-cyber-resilience-act-cra-with-linaro.mdx
@@ -19,7 +19,7 @@ Full enforcement of the CRA will not start until late 2027, but some deadlines a
 
 The timeline below highlights the key dates for device makers to keep in mind:
 
-![]()
+![](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1771600568/linaro-website/images/blog/IMG_2077_bkbwgf.jpg)
 
 Meeting the CRA's obligations can feel overwhelming because they affect many aspects of product development. The first step to compliance is identifying the scope of the product and which category of the CRA it falls under. The category determines the conformity assessment route and sets out clear expectations for the requirements manufacturers will need to meet.
 
@@ -27,26 +27,19 @@ At a high level, the regulation sets out five key, guiding requirements to achie
 
 * **Cybersecurity risk assessment**
 
-   - performing thorough threat modeling and risk analysis as an integral part of the design process, forming risk mitigations that feed into security requirements
-
+  * performing thorough threat modeling and risk analysis as an integral part of the design process, forming risk mitigations that feed into security requirements
 
   **Secure-by-design**
 
-   
-
-  - ensuring security features, driven by the risk assessment, are built into the product from day one (e.g., secure boot, encryption, over-the-air updates)
-
-
+  * ensuring security features, driven by the risk assessment, are built into the product from day one (e.g., secure boot, encryption, over-the-air updates)
 
   **Vulnerability Management**
 
-   - reliably tracking and fixing new and existing vulnerabilities throughout the product lifecycle, and having mechanisms in place to report incidents;
-
+  * reliably tracking and fixing new and existing vulnerabilities throughout the product lifecycle, and having mechanisms in place to report incidents;
 
   **Continuous compliance**
 
-   - ensuring that vulnerabilities in devices are continuously tracked, patched, and updated throughout the product support period;
-
+  * ensuring that vulnerabilities in devices are continuously tracked, patched, and updated throughout the product support period;
 
   **Transparency and user documentation**
 
@@ -57,7 +50,6 @@ At a high level, the regulation sets out five key, guiding requirements to achie
   **“Preparing for the EU Cyber Resilience Act (CRA)”,**
 
    can help. It explains the CRA’s main points, such as its requirements, timeline, and scope, and gives practical advice on how to meet them. The whitepaper covers what the CRA requires, why it matters to your business, what you risk if you fall behind, and how to get ready. It also shows how Linaro can help, from product classification and risk assessment to vulnerability management and long-term continuous compliance. 
-
 
 In relation to vulnerability management and continuous compliance, in a recent blog post, we **deep-dive** into how Linaro’s expertise in Software Supply Chain Management can help manufacturers effectively track vulnerabilities in their products' third-party components to get prepared for the CRA. See [here](https://www.linaro.org/blog/frtyhu/) for more details.
 
